[gd_scene load_steps=3 format=2]

[ext_resource path="res://Enemy/Spawner/EnemySpawner.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 1028.0

[node name="EnemySpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="NoSpawnArea" type="Area2D" parent="."]

[node name="SpawnShape" type="CollisionShape2D" parent="NoSpawnArea"]
shape = SubResource( 1 )
disabled = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
